# extract-audio-microservices

./: .env.example  .eslintrc.js  .gitignore  .golangci.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  DEVELOPMENT.md  HOW_TO_RUN.md  Makefile  README.md  Tiltfile  buf.gen.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
docs/api/: grpc-services.md  openapi.yaml
docs/deployment/: README.md  configuration.md  troubleshooting.md
el-plan/: design.md  requirements.md  tasks.md
infrastructure/: setup-databases.bat  setup-databases.sh
infrastructure/database/: README.md
infrastructure/docker/: README.md  databases.yml  mongodb.yml  postgresql.yml  rabbitmq.yml  redis.yml
infrastructure/k8s/: README.md  deploy-monitoring.sh
scripts/: setup-dev.bat  setup-dev.sh
services/analytics/: Dockerfile.dev  RECOMMENDATION_SYSTEM.md  pyproject.toml  test_comprehensive.py  test_minimal.py  test_quality_analysis.py  test_recommendation_system.py  test_simple.py
services/analytics/src/: main.py
services/analytics/src/analytics/: api.py  config.py  database.py  messaging.py  models.py  quality_analyzer.py  recommendation_engine.py  services.py  video_processor.py
services/auth/: Dockerfile.dev  go.mod  go.sum
services/converter/: Dockerfile.dev  go.mod  go.sum
services/frontend/: .env.example  .eslintrc.js  Dockerfile.dev  next.config.js  package.json  tailwind.config.js  tsconfig.json
services/gateway/: Dockerfile.dev  go.mod  go.sum
services/notification/: .env.example  Makefile  (+3 more)
shared/: go.mod  go.sum
(+151 files in other folders)
